add transition element to scatterplot

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,2 +1,6 @@
-<!-- <div id="svg1"></div> -->
-<p>click on text to update chart values</p>
+<div id="svg1">
+    <p>click on text to update chart values</p>
+</div>
+<!-- <div id="barchart">
+  <p>click on text to update chart values</p>
+ </div> -->
