add and remove data to bar chart

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,8 @@
-<div id="svg1">
+<!-- <div id="svg1">
     <p>click on text to update chart values</p>
+</div> -->
+
+<div id="barchart">
+  <p id="add">Add a new data value</p>
+  <p id="remove">Remove a data value</p>
 </div>
-<!-- <div id="barchart">
-  <p>click on text to update chart values</p>
- </div> -->
