--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
     <p>click on text to update chart values</p>
 </div> -->
 
-<div id="barchart">
+<!-- <div id="barchart">
   <p id="add">Add a new data value</p>
   <p id="remove">Remove a data value</p>
-</div>
+</div> -->
