--- a/source/stylesheets/d3.css
+++ b/source/stylesheets/d3.css
@@ -23,3 +23,14 @@
         font-size: 16px;
         line-height: 20px;
 }
+
+
+path {
+        stroke: white;
+        stroke-width: 0.25px;
+        fill: black;
+}
+
+path:hover, path.highlighted {
+  fill: red;
+}
