--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,11 +12,14 @@
     <%= stylesheet_link_tag "normalize", "all", "d3" %>
     <%= javascript_include_tag  "all" %>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="http://d3js.org/d3.geo.projection.v0.min.js"></script>
+    <script src="http://d3js.org/queue.v1.min.js"></script>
+    <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
   </head>
 
   <body class="<%= page_classes %>">
