--- a/source/stylesheets/d3.css
+++ b/source/stylesheets/d3.css
@@ -26,11 +26,43 @@
 
 
 path {
-        stroke: white;
-        stroke-width: 0.25px;
-        fill: black;
+  stroke: white;
+  stroke-width: 0.25px;
+  fill: black;
 }
 
 path:hover, path.highlighted {
   fill: red;
+}
+
+
+.stroke {
+  fill: none;
+  stroke: #000;
+  stroke-width: 3px;
+}
+
+.fill {
+  fill: #fff;
+}
+
+.graticule {
+  fill: none;
+  stroke: grey;
+  stroke-width: .5px;
+  stroke-opacity: .5;
+}
+
+.land {
+  fill: #222;
+}
+
+.water {
+  fill: #f0f8ff;
+}
+
+.boundary {
+  fill: none;
+  stroke: #fff;
+  stroke-width: .5px;
 }
