render map of toronto

--- a/source/stylesheets/d3.css
+++ b/source/stylesheets/d3.css
@@ -26,13 +26,13 @@
 
 
 path {
-  stroke: white;
+  stroke: red;
   stroke-width: 0.25px;
   fill: black;
 }
 
 path:hover, path.highlighted {
-  fill: red;
+  fill: blue;
 }
 
 
