--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,6 +20,8 @@
     <script src="http://d3js.org/d3.geo.projection.v0.min.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
+    <script src="https://fb.me/react-0.14.6.min.js"></script>
+    <script src="https://fb.me/react-dom-0.14.6.min.js"></script>
   </head>
 
   <body class="<%= page_classes %>">
